// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component pagination navigation 1`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="0"
            name="RFP Plan 0"
            planId={0}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="1"
            name="RFP Plan 1"
            planId={1}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="2"
            name="RFP Plan 2"
            planId={2}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="3"
            name="RFP Plan 3"
            planId={3}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="4"
            name="RFP Plan 4"
            planId={4}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="5"
            name="RFP Plan 5"
            planId={5}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="6"
            name="RFP Plan 6"
            planId={6}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="7"
            name="RFP Plan 7"
            planId={7}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="8"
            name="RFP Plan 8"
            planId={8}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="9"
            name="RFP Plan 9"
            planId={9}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item active"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li
            className="page-item"
            key="Next"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPageNext"
              onClick={[Function]}
            >
              Next
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Component pagination navigation 2`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="10"
            name="RFP Plan 10"
            planId={10}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="11"
            name="RFP Plan 11"
            planId={11}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="12"
            name="RFP Plan 12"
            planId={12}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="13"
            name="RFP Plan 13"
            planId={13}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="14"
            name="RFP Plan 14"
            planId={14}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="15"
            name="RFP Plan 15"
            planId={15}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="16"
            name="RFP Plan 16"
            planId={16}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="17"
            name="RFP Plan 17"
            planId={17}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="18"
            name="RFP Plan 18"
            planId={18}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="19"
            name="RFP Plan 19"
            planId={19}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item"
            key="Previous"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPagePrev"
              onClick={[Function]}
            >
              Prev
            </a>
          </li>
          <li
            className="page-item"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item active"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li
            className="page-item"
            key="Next"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPageNext"
              onClick={[Function]}
            >
              Next
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Component pagination navigation 3`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="0"
            name="RFP Plan 0"
            planId={0}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="1"
            name="RFP Plan 1"
            planId={1}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="2"
            name="RFP Plan 2"
            planId={2}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="3"
            name="RFP Plan 3"
            planId={3}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="4"
            name="RFP Plan 4"
            planId={4}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="5"
            name="RFP Plan 5"
            planId={5}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="6"
            name="RFP Plan 6"
            planId={6}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="7"
            name="RFP Plan 7"
            planId={7}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="8"
            name="RFP Plan 8"
            planId={8}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="9"
            name="RFP Plan 9"
            planId={9}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item active"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li
            className="page-item"
            key="Next"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPageNext"
              onClick={[Function]}
            >
              Next
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Component pagination navigation 4`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="10"
            name="RFP Plan 10"
            planId={10}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="11"
            name="RFP Plan 11"
            planId={11}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="12"
            name="RFP Plan 12"
            planId={12}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="13"
            name="RFP Plan 13"
            planId={13}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="14"
            name="RFP Plan 14"
            planId={14}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="15"
            name="RFP Plan 15"
            planId={15}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="16"
            name="RFP Plan 16"
            planId={16}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="17"
            name="RFP Plan 17"
            planId={17}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="18"
            name="RFP Plan 18"
            planId={18}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="19"
            name="RFP Plan 19"
            planId={19}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item"
            key="Previous"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPagePrev"
              onClick={[Function]}
            >
              Prev
            </a>
          </li>
          <li
            className="page-item"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item active"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li
            className="page-item"
            key="Next"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPageNext"
              onClick={[Function]}
            >
              Next
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Component pagination navigation 5`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="20"
            name="RFP Plan 20"
            planId={20}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="21"
            name="RFP Plan 21"
            planId={21}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="22"
            name="RFP Plan 22"
            planId={22}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="23"
            name="RFP Plan 23"
            planId={23}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="24"
            name="RFP Plan 24"
            planId={24}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="25"
            name="RFP Plan 25"
            planId={25}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="26"
            name="RFP Plan 26"
            planId={26}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="27"
            name="RFP Plan 27"
            planId={27}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="28"
            name="RFP Plan 28"
            planId={28}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="29"
            name="RFP Plan 29"
            planId={29}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item"
            key="Previous"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPagePrev"
              onClick={[Function]}
            >
              Prev
            </a>
          </li>
          <li
            className="page-item"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item active"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Component pagination render 1`] = `
<div
  style={
    Object {
      "overflowX": "hidden",
      "overflowY": "auto",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-md-6"
    />
    <div
      className="col-md-6"
    >
      <Connect(RfpStatusSearch) />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <table
        className="table table-sm table-striped"
      >
        <thead
          className="thead-light"
        >
          <tr
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th>
              ID
            </th>
            <th
              className="text-left pl-5"
            >
              Name
            </th>
            <th>
              Created by
            </th>
            <th>
              Status
            </th>
            <th
              style={
                Object {
                  "width": "400px",
                }
              }
            >
              Reports
            </th>
          </tr>
        </thead>
        <tbody>
          <Connect(RfpStatusRow)
            createdById={4}
            key="0"
            name="RFP Plan 0"
            planId={0}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="1"
            name="RFP Plan 1"
            planId={1}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="2"
            name="RFP Plan 2"
            planId={2}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="3"
            name="RFP Plan 3"
            planId={3}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="4"
            name="RFP Plan 4"
            planId={4}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="5"
            name="RFP Plan 5"
            planId={5}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="6"
            name="RFP Plan 6"
            planId={6}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="7"
            name="RFP Plan 7"
            planId={7}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="8"
            name="RFP Plan 8"
            planId={8}
          />
          <Connect(RfpStatusRow)
            createdById={4}
            key="9"
            name="RFP Plan 9"
            planId={9}
          />
        </tbody>
      </table>
      <nav
        aria-label="RFP plan pagination"
      >
        <ul
          className="pagination justify-content-center"
        >
          <li
            className="page-item active"
            key="1"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_1"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item"
            key="2"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_2"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            key="3"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPage_3"
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li
            className="page-item"
            key="Next"
          >
            <a
              className="page-link"
              href="#"
              id="rfpPageNext"
              onClick={[Function]}
            >
              Next
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;
